<resources>

    <!-- Main -->
    <string name="app_name">UMS</string>
    <string name="yes">კი</string>
    <string name="no">არა</string>
    <string name="dnd">Nothing can disturb you today ^^</string>
    <string name="current_semester">მიმდინარე სემესტრი</string>
    <string name="current_exams">გამოცდები</string>

    <!-- Navigation -->
    <string name="nav_score">ქულები</string>
    <string name="nav_calendar">ცხრილი</string>
    <string name="nav_exams">გამოცდები</string>
    <string name="nav_notifications">შეტყობინებები</string>
    <string name="nav_profile">პროფილი</string>

    <!-- Crash Reports -->
    <string name="crash_toast_text">Application may reduce to atoms, bugs are inevitable :(\nEmail has already been sent to developer and fix is probably in work ^^</string>
    <string name="crash_email_subject">UMS - Real time crash report</string>

    <!-- Auth -->
    <string name="auth_email">მაილი</string>
    <string name="auth_password">პაროლი</string>
    <string name="auth_title">აუტორიზაცია</string>
    <string name="auth_login">შესვლა</string>
    <string name="auth_empty">გთხოვთ შეავსოთ მოცემული ველი</string>
    <string name="auth_error">აუტორიზაციის დროს მოხდა შეცდომა :(</string>

    <!-- Profile -->
    <string name="profile_logout">გამოსვლა</string>
    <string name="profile_logout_prompt">ნამდვილად გსურთ გასვლა?</string>
    <string name="profile_edit">პაროლის შეცვლა</string>
    <string name="profile_semester_header">ყველა სემესტრი</string>

    <!-- Change Profile -->
    <string name="profile_change_submit">შეცვლა</string>
    <string name="profile_change_password_old">ძველი პაროლი</string>
    <string name="profile_change_password_new">ახალი პაროლი</string>
    <string name="profile_change_theme_title">თემის შეცვლა</string>
    <string name="profile_change_password_error">პაროლი არასწორია</string>
    <string name="profile_change_success">პაროლი წარმატებით შეიცვალა</string>

    <!-- Calendar Days -->
    <string name="calendar_monday">ორშ.</string>
    <string name="calendar_tuesday">სამშ.</string>
    <string name="calendar_wednesday">ოთხშ.</string>
    <string name="calendar_thursday">ხუთშ.</string>
    <string name="calendar_friday">პარ.</string>
    <string name="calendar_saturday">შაბ.</string>
    <string name="calendar_sunday">კვ.</string>

</resources>
